--- a/index.html
+++ b/index.html
@@ -439,15 +439,12 @@
             <h2 class="text-4xl font-bold text-center mb-16 text-gray-800">Certifications</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                 
-                <!-- CERTIFICATE ITEM - Copy this block to add more certificates -->
+                <!-- Arc GIS pro Basics -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <!-- CERTIFICATE IMAGE - Loads from images/certificate folder -->
-                    <!-- To add new certificate: Put image in images/certificate/ folder and update src and alt below -->
-                    <img src="images/certificate/arcgis-pro-basics.jpg" 
+                    <img src="images/certfcate/Arc Gis pro Basics.jpg" 
                          alt="ArcGIS Pro Basics Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-purple-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <!-- Fallback placeholder if image doesn't load -->
                     <div class="aspect-[4/3] bg-gradient-to-br from-purple-100 to-purple-200 border-2 border-purple-200 flex items-center justify-center" style="display: none;">
                         <div class="text-center p-4">
                             <div class="text-4xl mb-2">🗺️</div>
@@ -455,15 +452,13 @@
                         </div>
                     </div>
                     <div class="p-4 text-center">
-                        <!-- Replace with your certificate title -->
                         <h3 class="font-semibold text-gray-800 text-sm">ArcGIS Pro Basics</h3>
                     </div>
                 </div>
-                <!-- END OF CERTIFICATE ITEM -->
 
                 <!-- Basic Adobe Premiere -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/basic-adobe-premiere.jpg" 
+                    <img src="images/certfcate/BasicAdobe premiere.png" 
                          alt="Basic Adobe Premiere Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-pink-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -480,7 +475,7 @@
 
                 <!-- Basics of JavaScript Web Apps -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/basics-javascript-web-apps.jpg" 
+                    <img src="images/certfcate/Basics of JavaScript Web Apps_Certificate_.jpg" 
                          alt="Basics of JavaScript Web Apps Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-yellow-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -497,7 +492,7 @@
 
                 <!-- Cartography -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/cartography.jpg" 
+                    <img src="images/certfcate/Cartography_Certificate_.jpg" 
                          alt="Cartography Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-green-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -514,7 +509,7 @@
 
                 <!-- Certificate of Experience -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/certificate-of-experience.jpg" 
+                    <img src="images/certfcate/Certificate of experience.png" 
                          alt="Certificate of Experience" 
                          class="aspect-[4/3] w-full object-cover border-2 border-blue-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -529,9 +524,9 @@
                     </div>
                 </div>
 
-                <!-- Computer Essentials -->
+                <!-- Computer Essentials (with space) -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/computer-essentials.jpg" 
+                    <img src="images/certfcate/Computer Essentials .jpg" 
                          alt="Computer Essentials Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-indigo-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -546,9 +541,26 @@
                     </div>
                 </div>
 
+                <!-- Computer Essentials (without space) -->
+                <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
+                    <img src="images/certfcate/Computer Essentials.jpg" 
+                         alt="Computer Essentials Certificate" 
+                         class="aspect-[4/3] w-full object-cover border-2 border-slate-200"
+                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="aspect-[4/3] bg-gradient-to-br from-slate-100 to-slate-200 border-2 border-slate-200 flex items-center justify-center" style="display: none;">
+                        <div class="text-center p-4">
+                            <div class="text-4xl mb-2">💻</div>
+                            <p class="text-sm text-slate-600 font-medium">Certificate Image</p>
+                        </div>
+                    </div>
+                    <div class="p-4 text-center">
+                        <h3 class="font-semibold text-gray-800 text-sm">Computer Essentials</h3>
+                    </div>
+                </div>
+
                 <!-- Coursera: Python for Everybody -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/coursera-python-for-everybody.jpg" 
+                    <img src="images/certfcate/coursera python for everyone .png" 
                          alt="Coursera Python for Everybody Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-orange-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -565,7 +577,7 @@
 
                 <!-- CSS Certificate -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/css-certificate.jpg" 
+                    <img src="images/certfcate/CSS_certificate.jpg" 
                          alt="CSS Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-teal-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -582,7 +594,7 @@
 
                 <!-- Design of Flood Protection and Storm Drain Works -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/design-flood-protection-storm-drain.jpg" 
+                    <img src="images/certfcate/design of flood protection and storm drain works.jpg" 
                          alt="Design of Flood Protection and Storm Drain Works Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-cyan-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -599,7 +611,7 @@
 
                 <!-- Full Stack Development Track -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/full-stack-development-track.jpg" 
+                    <img src="images/certfcate/Full stack development track .jpg" 
                          alt="Full Stack Development Track Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-purple-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -616,7 +628,7 @@
 
                 <!-- Geo App -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/geo-app.jpg" 
+                    <img src="images/certfcate/geo app.PNG" 
                          alt="Geo App Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-emerald-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -633,7 +645,7 @@
 
                 <!-- GIS for Climate Action -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/gis-for-climate-action.jpg" 
+                    <img src="images/certfcate/GIS for Climate Action_Certificate.jpg" 
                          alt="GIS for Climate Action Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-green-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -650,7 +662,7 @@
 
                 <!-- Going Places with Spatial Analysis -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/going-places-spatial-analysis.jpg" 
+                    <img src="images/certfcate/Going Places with Spatial Analysis_Certificate_.jpg" 
                          alt="Going Places with Spatial Analysis Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-violet-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -667,7 +679,7 @@
 
                 <!-- HTML Certificate -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/html-certificate.jpg" 
+                    <img src="images/certfcate/HTML_certificate.jpg" 
                          alt="HTML Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-red-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -684,7 +696,7 @@
 
                 <!-- Imagery in Action -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/imagery-in-action.jpg" 
+                    <img src="images/certfcate/Imagery in Action_Certificate.jpg" 
                          alt="Imagery in Action Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-pink-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -701,7 +713,7 @@
 
                 <!-- Internet and Email Essentials -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/internet-email-essentials.jpg" 
+                    <img src="images/certfcate/Internet and Email Essentials.jpg" 
                          alt="Internet and Email Essentials Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-blue-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -718,7 +730,7 @@
 
                 <!-- Introduction to Web Development (PHP & SQL) -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/intro-web-development-php-sql.jpg" 
+                    <img src="images/certfcate/Introduction to web development using_php_and_sql.jpg" 
                          alt="Introduction to Web Development PHP SQL Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-amber-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -735,7 +747,7 @@
 
                 <!-- JavaScript Certificate -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/javascript-certificate.jpg" 
+                    <img src="images/certfcate/JavaScript_certificate.jpg" 
                          alt="JavaScript Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-yellow-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -752,7 +764,7 @@
 
                 <!-- Python in GIS -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/python-in-gis.jpg" 
+                    <img src="images/certfcate/Python in gis.png" 
                          alt="Python in GIS Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-lime-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -769,7 +781,7 @@
 
                 <!-- QGIS 3 Desktop -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/qgis-3-desktop.jpg" 
+                    <img src="images/certfcate/Qgis 3 Desktop.jpg" 
                          alt="QGIS 3 Desktop Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-emerald-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -786,7 +798,7 @@
 
                 <!-- The Location Advantage -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover">
-                    <img src="images/certificate/the-location-advantage.jpg" 
+                    <img src="images/certfcate/The Location Advantage_Certificate_.jpg" 
                          alt="The Location Advantage Certificate" 
                          class="aspect-[4/3] w-full object-cover border-2 border-rose-200"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -966,5 +978,5 @@
             document.querySelector('.nav-btn').classList.add('nav-active');
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'98f33c33f479536e',t:'MTc2MDU3MjM5OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'98f36a5ed710536e',t:'MTc2MDU3NDI4OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
